SALESFORCE_PRACTICE PROJECT/force-app/main/default/objects/Payment__c/Payment__c.object-meta.xml
<CustomObject>
    <label>Payment</label>
    <nameField>
        <displayFormat>PAYM-{0000}</displayFormat>
        <label>Payment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>