SALESFORCE_PRACTICE PROJECT/force-app/main/default/objects/Payment__c/fields/Final_Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Final_Paid_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>This Field is Auto calculated 
Don&apos;t try to change this</inlineHelpText>
    <label>Final Paid Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>