SALESFORCE_PRACTICE PROJECT/force-app/main/default/objects/Payment__c/fields/Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Transaction_ID__c</fullName>
    <displayFormat>TRNXMCY{00000}</displayFormat>
    <label>Transaction ID</label>
    <type>AutoNumber</type>
</CustomField>